css/general.css
@-moz-viewport { width: device-width; scale: 1; }
@-ms-viewport { width: device-width; scale: 1; }
@-o-viewport { width: device-width; scale: 1; }
@-webkit-viewport { width: device-width; scale: 1; }
@viewport { width: device-width; scale: 1; }

html {
	box-sizing: border-box;
}

*, *:before, *:after {
	box-sizing: inherit;
}

body {
    margin: 0;
    padding: 0;
    background-color: #FED245;   
}

.img-flex {
  display: block;
  width: 100;
  margin: 0 auto;
}

h1 {
  text-align: center;
  background-image: url(../images/spider.svg), url(../images/spider.svg);
  padding: 0 2rem;
  background-size: .3em auto;
  background-repeat: no-repeat;
  background-position: 0 100%, 100% 100%;
  display: inline-block;
  font-family: 'Creepster', sans-serif;
  font-size: 3rem;
  margin-top: -.5rem;
}

.header {
  text-align: center;
}

.spider1 {
  max-height: 7rem;
  margin-top: -2rem; 
  display: inline-block;
  float: left;
}

.info {
  text-align: center;
  list-style-type: none;
  padding: 0;
  margin-top: -1rem;
  font-family: 'Cutive Mono' sans-serif;
  text-transform: lowercase;
  font-size: .8rem;
}

.email {
  text-transform: lowercase;
  
}

.socialmedia {
  list-style-type: none;
  text-align: center;
  padding: 0;
  margin-top: -1.3rem;
  margin-bottom: 0;
}

.instagram {
  height: 3em;
  width: 3em;
  background-image: url(../images/instagram.svg);
  background-repeat: no-repeat;
}

.behance {
  height: 3em;
  width: 3em;
  background-image: url(../images/behance.svg);
  background-repeat: no-repeat;
}

.tumblr {
  height: 3em;
  width: 3em;
  background-image: url(../images/tumblr.svg);
  background-repeat: no-repeat;
}

.linkedin {
  height: 3em;
  width: 3em;
  background-image: url(../images/linkedin.svg);
  background-repeat: no-repeat;
}

.icon {
  display: inline-block;
  width: 1.5rem;
  height: 1.5rem;
  padding-bottom: 0;
}

.nav {
  margin: 0 3rem 0 3rem;
  padding: 0;
  list-style-type: none;
  display: none;
  position: relative;
}

.nav li {
}

.nav a {
  display: block;
  padding: .3em .8em;
  background-color: #000;
  text-align: center;
  border-bottom: 1px solid #FED245;
  text-decoration: none;
  font-family: 'Cutive Mono', sans-serif;
  text-transform: lowercase;
  font-size: .85rem;
  color: #FED245;
}

.nav-check {
  position: absolute;
  top: -3em;
}

.nav-check:checked ~ .nav {
  display: block;
}

.nav-label {
  cursor: pointer;
  width: 30px;
  z-index: 1;
  display: inline-block;
}

.nav-open,
.nav-close {
  display: block;
  width: 100%;
}

.nav-close {
  display: none;
}

.nav-check:checked ~ .nav-label .nav-open {
  display: none;
}

.nav-check:checked ~ .nav-label .nav-close {
  display: block;
}

#galleryphotos {
  margin: 0;
  padding: 0;
}

.bodyimages {
  z-index: 0;
  position: relative;
  top: 1em;
}

.images {
  display: block;
  margin: auto;
  margin: auto;
  position: relative;
  width: 100%;
}

.infotitle {
  text-align: center;
  padding: 0;
  margin-bottom: 0;
  font-family: 'Creepster', sans-serif;
  font-size: 3rem;
}

.myface {
    width: 20rem;
    margin-top: 3rem;
    display: block;
    margin-left: auto;
    margin-right: auto;
    border: solid 4px black;
}

h3 {
  font-family: 'Creepster', sans-serif;
  text-align: center;
  margin: 1em;
}

.infoinfo {
  margin: 2rem;
}

.port-title {
  color: #0B8599;
  text-transform: uppercase;
  padding-top: 4.5em;
  text-align: center;
}

.portfolio-intro {
  left: 2em;
  margin: 1em;
  padding: 5%;
  padding-top: 0;
  text-align: center;
}

.port-box {
  width: 100%;
}

.port-squares {
  padding: 1em;
  display: block;
  text-align: center;
}

.port-text {
  padding: 1rem;
  display: block;
  background-color: #333333;
  color: #0B8599;
  display: none;
}

@media only screen and (min-width: 25em) {

}

@media only screen and (min-width: 38em) {
  
  .header {
  text-align: center;
  }
  
  .nav-label {
    cursor: pointer;
    width: 30px;
    z-index: 1;
    display: inline-block;
  }
  
  .socialmedia {
    list-style-type: none;
    text-align: center;
    padding: 0;
    margin-top: -1.3rem;
    margin-bottom: 0;
  }
}

}

@media only screen and (min-width: 60em) {
  
  .header {
  text-align: left;
  }
  
  .nav-label {
    cursor: pointer;
    width: 30px;
    z-index: 1;
    display: inline-block;
  }
  
  .socialmedia {
    list-style-type: none;
    text-align: left;
    padding: 0;
    top: 5rem;
  }
  
  .icon {
    display: inline-block;
    width: 1.5rem;
    height: 1.5rem;
    padding-bottom: 0; 
    top: 2rem;
  }
}

